# game-of-life

./: CMakeLists.txt  README.md
src/: board.cpp  board.h  cell.cpp  cell.h  main.cpp  statusBar.cpp  statusBar.h
